# holosoma_sim2real_pkgs

./: README.md
far_msgs/: CMakeLists.txt  package.xml
far_msgs/msg/: PolicyActions.msg  RobotState.msg
holosoma_lidar_cpp_publisher/: CMakeLists.txt  README.md  package.xml
holosoma_lidar_cpp_publisher/src/: lidar_cpp_publisher.cpp
holosoma_robot_description/: package.xml  setup.cfg  setup.py
holosoma_robot_description/holosoma_robot_description/: __init__.py  initial_map_frame_bootstrap.py  robot_state_to_joint_state.py  unitree_lowstate_to_joint_state.py
holosoma_robot_description/launch/: g1_robot_state_publisher.launch.py
holosoma_robot_description/urdf/: g1_29dof.urdf
holosoma_robot_description/urdf/meshes/: D435_mount.STL  polycam_2026_5_22.stl
