<?xml version="1.0"?>
<package format="3">
  <name>holosoma_robot_description</name>
  <version>0.1.0</version>
  <description>Robot description and launch files for Holosoma G1 ROS2 TF publishing.</description>
  <maintainer email="phc@example.com">phc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>far_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
